--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,16 @@
 .App {
   text-align: center;
+  color: #2c3e50;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.data-part{
+  box-shadow:rgba(0, 0, 0, 0.35) 0px 5px 15px ;
+  text-transform: capitalize;
+  border-radius: 12px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.data-part > p{
+  padding: 0px 25px ;
+  font-weight: 600;
+  font-size: 1.4rem;
+  color: #2c3e50;
 }
